--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>React, Paper, Scissors</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">  
+  <!--<link rel="stylesheet" href="styles.css">-->
 </head>
 <body>
   <div id="app"></div>
